Fix Bug 320074 - KMail uses a wrong autocorrection filename

FIXED-IN: 4.11
BUG: 320074